--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,15 @@ html, body {
 	font-family: 'Sofia', cursive;
 }
 
+#credits {
+  text-align: center;
+  color: #fff;
+  padding-bottom: 10px;
+  }
+  #credits a:hover, #credits a:visited{
+    color: #fff;
+  }
+
 #menu {
   display: inline-block;
   padding-left: 10px;
@@ -99,12 +108,13 @@ html, body {
 }
 
 .title {
-	text-align: center;
-	line-height: 60px;
-	font-size: 3.4em;
-	color: white;
-	margin-top: 30px;
-	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
+  text-align: center;
+  line-height: 40px;
+  font-size: 3.4em;
+  color: white;
+  margin-top: 25px;
+  margin-bottom: 10px;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
 }
 
 .book {
